added swagger documentation for Answers
