# src/app/Http/Requests/CreateAnswerRequest.php
@@ -4,6 +4,17 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
+/**
+ * @OA\Schema(
+ *     schema="CreateAnswerRequest",
+ *     type="object",
+ *     title="Create Answer Request",
+ *     required={"value", "order"},
+ *     @OA\Property(property="value", type="string"),
+ *     @OA\Property(property="order", type="integer"),
+ * )
+ */
+
 class CreateAnswerRequest extends FormRequest
 {
     /**
