# src/app/Models/Answer.php
@@ -5,6 +5,24 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Auth\Access\AuthorizationException;
 
+/**
+ * @OA\Schema(
+ *     schema="Answer",
+ *     type="object",
+ *     title="Answer",
+ *     properties={
+ *         @OA\Property(property="id", type="integer", format="int64"),
+ *         @OA\Property(property="question_id", type="integer", format="int64"),
+ *         @OA\Property(property="value", type="string"),
+ *         @OA\Property(property="order", type="integer"),
+ *         @OA\Property(property="created_at", type="string", format="date-time"),
+ *         @OA\Property(property="updated_at", type="string", format="date-time"),
+ *     },
+ *     required={"question_id", "value", "order"},
+ * )
+ */
+
+
 class Answer extends Model
 {
 
