# src/storage/api-docs/api-docs.json
@@ -1,6 +1,188 @@
 {
     "openapi": "3.0.0",
     "paths": {
+        "/questions/{question}/answers": {
+            "get": {
+                "tags": [
+                    "Answers"
+                ],
+                "summary": "Get all answers for a question",
+                "description": "Get all answers for a given question if it is active",
+                "operationId": "getAnswers",
+                "parameters": [
+                    {
+                        "name": "question",
+                        "in": "path",
+                        "description": "ID of the question",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Answer"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Answers"
+                ],
+                "summary": "Create a new answer for a question",
+                "description": "Create a new answer for a given question if it is active",
+                "operationId": "createAnswer",
+                "parameters": [
+                    {
+                        "name": "question",
+                        "in": "path",
+                        "description": "ID of the question",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CreateAnswerRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Answer"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/questions/{question}/answers/{answer}": {
+            "get": {
+                "tags": [
+                    "Answers"
+                ],
+                "summary": "Show a single answer",
+                "description": "Retrieve the details of a single answer",
+                "operationId": "showAnswer",
+                "parameters": [
+                    {
+                        "name": "question",
+                        "in": "path",
+                        "description": "ID of the question that the answer belongs to",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "answer",
+                        "in": "path",
+                        "description": "ID of the answer to retrieve",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Answer"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Answers"
+                ],
+                "summary": "Delete an answer",
+                "description": "Delete a single answer",
+                "operationId": "deleteAnswer",
+                "parameters": [
+                    {
+                        "name": "question",
+                        "in": "path",
+                        "description": "ID of the question that the answer belongs to",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "answer",
+                        "in": "path",
+                        "description": "ID of the answer to delete",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/surveys/{survey}/questions": {
             "get": {
                 "tags": [
@@ -371,6 +553,55 @@
     },
     "components": {
         "schemas": {
+            "CreateAnswerRequest": {
+                "title": "Create Answer Request",
+                "required": [
+                    "value",
+                    "order"
+                ],
+                "properties": {
+                    "value": {
+                        "type": "string"
+                    },
+                    "order": {
+                        "type": "integer"
+                    }
+                },
+                "type": "object"
+            },
+            "Answer": {
+                "title": "Answer",
+                "required": [
+                    "question_id",
+                    "value",
+                    "order"
+                ],
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "question_id": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "value": {
+                        "type": "string"
+                    },
+                    "order": {
+                        "type": "integer"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time"
+                    }
+                },
+                "type": "object"
+            },
             "Question": {
                 "title": "Question",
                 "required": [
@@ -423,6 +654,9 @@
         }
     },
     "tags": [
+        {
+            "name": "Answers"
+        },
         {
             "name": "Questions",
             "description": "API Endpoints for managing questions"
